@@ -254,6 +254,53 @@ class FlakyIntegrationSpec extends Specification {
 }
 ----
 
+Retries can also be applied to spec classes which has the same effect as applying it to each feature method that isn't
+already annotated with {@code Retry}.
+
+[source,groovy]
+----
+@Retry
+class FlakyIntegrationSpec extends Specification {
+  def "will be retried with config from class"() {
+    ...
+  }
+  @Retry(count = 5)
+  def "will be retried using its own config"() {
+    ...
+  }
+}
+----
+
+A {@code @Retry} annotation that is declared on a spec class is applied to all features in all subclasses as well,
+unless a subclass declares its own annotation. If so, the retries defined in the subclass are applied to all feature
+methods declared in the subclass as well as inherited ones.
+
+Given the following example, running `FooIntegrationSpec` will execute both `inherited` and `foo` with one retry.
+Running `BarIntegrationSpec` will execute `inherited` and `bar` with two retries.
+
+[source,groovy]
+----
+@Retry(count = 1)
+abstract class AbstractIntegrationSpec extends Specification {
+  def inherited() {
+    ...
+  }
+}
+
+class FooIntegrationSpec extends AbstractIntegrationSpec {
+  def foo() {
+    ...
+  }
+}
+
+@Retry(count = 2)
+class BarIntegrationSpec extends AbstractIntegrationSpec {
+  def bar() {
+    ...
+  }
+}
+----
+
 Check https://github.com/spockframework/spock/blob/master/spock-specs/src/test/groovy/org/spockframework/smoke/extension/RetryFeatureExtensionSpec.groovy[RetryFeatureExtensionSpec] for more examples.
 
 === Use
